--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Combined Chart: Household Income Insights</title>
+  <title>Singapore Household Income Insights: Multi-Year Analysis;</title>
   <!-- Chart.js library -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- PapaParse for CSV parsing -->
@@ -98,6 +98,8 @@
   <div class="container-text">
     <h2>Hypothesis</h2>
     <p>Different dwelling types show distinct income patterns across household sizes, with larger households and more expensive dwelling types showing higher average incomes.</p>
+    <p>1. The insights from the data visualization leads to further research on ratio of earning persons of households.</p>
+    <p>2. The insights intricate the social strata of people living in HDB Flats and private proerties.</p>
 
     <h2>Dataset</h2>
     <ul>
