--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <li>These observations suggest a potential area of study: exploring the ratio of earning household members across different types of properties.</li>
       <li>Focusing again on dwelling unit types, the data indicates that moving into private properties, which is often considered a status symbol in Singapore, is associated with a marked increase in income over the years.</li>
       <li>Moreover, the gap in monthly incomes between HDB flats and private properties becomes more pronounced with larger household sizes, displaying a more exponential divergence.</li>
-      <li>Collecting additional data on the ratio of earning household members could provide further insights into the observed income differences, helping to deepen our understanding of income distribution across various dwelling types.</li>
+      <li>Adding more data on the ratio of earning household members could provide further insights into the observed income differences, helping to deepen our understanding of income distribution across various dwelling types.</li>
     </ul>
   </div>
   
