--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <h2>Hypothesis</h2>
     <p>Different dwelling types show distinct income patterns across household sizes, with larger households and more expensive dwelling types showing higher average incomes.</p>
     <p>1. The insights from the data visualization leads to further research on ratio of earning persons of households.</p>
-    <p>2. The insights intricate the social strata of people living in HDB Flats and private proerties.</p>
+    <p>2. The insights intricate the social strata of people living in HDB Flats and private properties.</p>
 
     <h2>Dataset</h2>
     <ul>
