--- a/index.html
+++ b/index.html
@@ -106,10 +106,8 @@
     <ul>
       <li>Household Size, Average Monthly Income, and Dwelling Unit Type from Household Expenditure Surveys (2002/03, 2007/08, 2012/13, 2017/18).</li>
     </ul>
-    <p><a href="https://data.gov.sg/datasets?query=Resident+Households+by+Monthly+Household+Income+and+Household+Size&page=1&resultId=d_db9775ba34e16e1d66400cba94f8a574" target="_blank">
-      View Source: Resident Households by Monthly Household Income and Household Size by Year</a></p>
-    <p><a href="https://data.gov.sg/datasets?query=Average+Monthly+Household+Income+Among+Resident+Households+by+Household+Size+and+Type+of+Dwelling&page=1&resultId=d_b5619276fd420e5e5701bf9a3b081e1a" target="_blank">
-      View Source: Average Monthly Household Income Among Resident Households by Household Size and Type of Dwelling by Year</a></p>
+    <p>View Source: <a href="https://data.gov.sg/datasets?query=Resident+Households+by+Monthly+Household+Income+and+Household+Size&page=1&resultId=d_db9775ba34e16e1d66400cba94f8a574" target="_blank">Resident Households by Monthly Household Income and Household Size by Year</a></p>
+    <p>View Source: <a href="https://data.gov.sg/datasets?query=Average+Monthly+Household+Income+Among+Resident+Households+by+Household+Size+and+Type+of+Dwelling&page=1&resultId=d_b5619276fd420e5e5701bf9a3b081e1a" target="_blank">Average Monthly Household Income Among Resident Households by Household Size and Type of Dwelling by Year</a></p>
 
     <h2>Visualization</h2>
     <p>
